[tool.poetry]
name = "testformirrorapp"
version = "0.1.0"
description = ""
authors = ["SuperIgorOK <mcdisel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
sqlalchemy = "^2.0.29"
flake8 = "^7.0.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
